2010-04-27  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added callback of connector for post-process operations
	* Added dependency on svconnector version 1.1.0 or above

2010-03-26  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Raised status to stable
	* Released to TER as version 1.0.0

2010-03-22  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added option to configure number of records in debug ouput (to be also used in preview)
	* Updated the manual

2010-02-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added full handling of user rights in BE module
	* Added preemptive handling of user rights in importer script
	* Fixed a bug with a missing initialization in foreign mappings

2010-02-03  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Set compatibility limit for flushOutput option to TYPO3 4.2 or below

2010-01-19  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected usage of TYPO3AJAX API
	* Added possibility to exclude specific fields from insert or update

2009-12-22  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added display of external configuration inside BE module

2009-12-08  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved check to completely hide display of auto sync column when no sync tool is available

2009-11-25  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected abusive display of minimumRecords error message
	* Released to TER as version 0.11.2

2009-11-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added process for aborting import
	* Updated the manual
	* Released to TER as version 0.11.1

2009-11-13  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Provided full scheduler support (earlier support was broken due to API changes in the scheduler)

2009-11-09  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added reporting of global result status in email subject

2009-10-26  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to use cron-like syntax in automatic sync configuration
